//----------------------------------------------------------------------------
// Copyright 2023, Ed Keenan, all rights reserved.
//----------------------------------------------------------------------------

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

message Vect_proto
{
	// Define Message here:  
	optional float   x = 1;
	optional float   y = 2;
	optional float   z = 3;
	optional float   w = 4;
}

// --- End of File ---
